test/org/midica/testfiles/failing/meta-with-block.midica
INCLUDE inc/instruments.midica

META
	{
		composer	Beethoven
	}
END
